[package]
name = "estuary_json_ext"
version = "0.1.0"
authors = ["Johnny Graettinger <johnny531@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
estuary_json = { path = "../json" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.11"
serde_json = "1.0"
url = "2.1.1"
thiserror = "1.0.14"
rusqlite = { version = "0.21.0", features = ["functions", "bundled", "url", "serde_json"] }
regex = "1.3.4"
itertools = "0.9.0"
uuid = "0.8.1"
tinyvec = {version = "0.3.3", features = ["alloc"]}

[lib]
path = "lib.rs"
