[package]
name = "materialization"
version = "0.0.0"
authors = ["Estuary Technologies, Inc"]
edition = "2018"

[dependencies]
catalog = { path = "../catalog", version = "0.0.0" }
doc = { path = "../doc", version = "0.0.0" }
json = { path = "../json", version = "0.0.0" }
labels = { path = "../labels", version = "0.0.0" }
protocol = { path = "../protocol", version = "0.0.0" }

itertools = "*"
log = "*"
prost-types = "0.7"
rusqlite = { version = "*", features = ["bundled", "collation", "column_decltype", "functions", "serde_json", "url"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version =  "*"}
skim = "*"
thiserror = "*"
tuikit = "*"
unicode-width = "*"

[dev-dependencies]
insta = "*"
