[package]
name = "agent-sql"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
proto-flow = { path = "../proto-flow" }
tables = { path = "../tables" }
chrono = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tokio = { workspace = true }
