load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "agent",
    srcs = glob(["src/**/*.rs"]),
    crate_root = "src/lib.rs",
    edition = "2024",
    visibility = ["//visibility:public"],
    rustc_env = {
        "DATABASE_URL": "postgresql://postgres:postgres@localhost:5432/postgres",
    },
    tags = [
        "no-remote-exec",
        "requires-db",
        "requires-network",
    ],
    deps = [
        "//crates/activate",
        "//crates/allocator",
        "//crates/async-process",
        "//crates/automations",
        "//crates/build",
        "//crates/control-plane-api",
        "//crates/coroutines",
        "//crates/dekaf",
        "//crates/doc",
        "//crates/migrate",
        "//crates/gazette",
        "//crates/json",
        "//crates/labels",
        "//crates/locate-bin",
        "//crates/models",
        "//crates/ops",
        "//crates/proto-flow",
        "//crates/proto-gazette",
        "//crates/proto-grpc:proto-grpc-runtime-client",
        "//crates/runtime",
        "//crates/sources",
        "//crates/tables",
        "//crates/validation",
        "@crates_io//:aide",
        "@crates_io//:anyhow",
        "@crates_io//:async-graphql",
        "@crates_io//:async-graphql-axum",
        "@crates_io//:axum",
        "@crates_io//:axum-extra",
        "@crates_io//:base64",
        "@crates_io//:bytes",
        "@crates_io//:chrono",
        "@crates_io//:clap",
        "@crates_io//:colored_json",
        "@crates_io//:futures",
        "@crates_io//:humantime",
        "@crates_io//:humantime-serde",
        "@crates_io//:itertools",
        "@crates_io//:jsonwebtoken",
        "@crates_io//:lazy_static",
        "@crates_io//:rand",
        "@crates_io//:regex",
        "@crates_io//:reqwest",
        "@crates_io//:rustls",
        "@crates_io//:schemars",
        "@crates_io//:serde",
        "@crates_io//:serde_json",
        "@crates_io//:sqlx",
        "@crates_io//:tempfile",
        "@crates_io//:thiserror",
        "@crates_io//:tokio",
        "@crates_io//:tokio-util",
        "@crates_io//:tonic",
        "@crates_io//:tower",
        "@crates_io//:tower-http",
        "@crates_io//:tracing",
        "@crates_io//:tracing-subscriber",
        "@crates_io//:url",
        "@crates_io//:uuid",
        "@crates_io//:validator",
        "@crates_io//:xxhash-rust",
        "@crates_io//:zeroize",
    ],
    proc_macro_deps = [
        "@crates_io//:async-trait",
        "@crates_io//:derivative",
    ],
)

rust_test(
    name = "agent_lib_tests",
    size = "small",
    edition = "2024",
    crate = ":agent",
    data = glob([
        "src/**/snapshots/*.snap",
        "src/**/*.graphql",
    ]),
    rustc_flags = [
        "-A",
        "deprecated",
    ],
    rustc_env = {
        "DATABASE_URL": "postgresql://postgres:postgres@localhost:5432/postgres",
    },
    env = {
        "DATABASE_URL": "postgresql://postgres:postgres@localhost:5432/postgres",
        "INSTA_WORKSPACE_ROOT": ".",
    },
    tags = [
        "no-remote-exec",
        "requires-db",
        "requires-network",
    ],
    deps = [
        "//crates/assemble",
        "//crates/test-support",
        "@crates_io//:insta",
        "@crates_io//:md5",
        "@crates_io//:serial_test",
        "@crates_io//:tokio",
        "@crates_io//:uuid",
    ],
)
