[package]
name = "agent"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent-sql = { path = "../agent-sql" }
async-process = { path = "../async-process" }
doc = { path = "../doc" }
journal-client = { path = "../journal-client" }
models = { path = "../models" }
proto-flow = { path = "../proto-flow" }
tables = { path = "../tables", features = ["persist"] }

anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytelines = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
tempdir = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
validator = { workspace = true }
derivative = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tokio = { workspace = true }
serial_test = { workspace = true }
uuid = { workspace = true }
