[package]
name = "agent"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
activate = { path = "../activate" }
agent-sql = { path = "../agent-sql" }
allocator = { path = "../allocator" }
async-process = { path = "../async-process" }
build = { path = "../build" }
doc = { path = "../doc" }
gazette = { path = "../gazette" }
json = { path = "../json" }
labels = { path = "../labels" }
models = { path = "../models" }
ops = { path = "../ops" }
proto-flow = { path = "../proto-flow" }
proto-gazette = { path = "../proto-gazette" }
proto-grpc = { path = "../proto-grpc", features = ["runtime_client"] }
runtime = { path = "../runtime" }
sources = { path = "../sources" }
tables = { path = "../tables", features = ["persist"] }
validation = { path = "../validation" }

anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
colored_json = { workspace = true }       # Used to render ops::Logs for UI.
derivative = { workspace = true }
futures = { workspace = true }
humantime-serde = { workspace = true }
itertools = { workspace = true }
jsonwebtoken = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
xxhash-rust = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
md5 = { workspace = true }
tokio = { workspace = true }
serial_test = { workspace = true }
uuid = { workspace = true }
