load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "allocator",
    srcs = glob([
        "src/**/*.rs",
    ]),
    crate_root = "src/lib.rs",
    edition = "2024",
    deps = [
        "@crates_io//:jemalloc-ctl",
        "@crates_io//:jemallocator",
        "@crates_io//:lazy_static",
    ],
)

rust_test(
    name = "allocator_test",
    crate = ":allocator",
    size = "small",
    edition = "2024",
)
