[package]
name = "assemble"
version = "0.0.0"
authors = ["Estuary Technologies, Inc"]
edition = "2021"

[dependencies]
doc = { path = "../doc" }
json = { path = "../json" }
labels = { path = "../labels" }
models = { path = "../models" }
proto-flow = { path = "../proto-flow" }
proto-gazette = { path = "../proto-gazette" }
tables = { path = "../tables" }
typescript = { path = "../typescript" }

bytes = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
percent-encoding = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
superslice = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
sources = { path = "../sources" }

insta = { workspace = true }
lazy_static = { workspace = true }
serde_yaml = { workspace = true }
