[package]
name = "async-process"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
libc = { workspace = true }
shared_child = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
