
[package]
name = "avro"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
doc = { path = "../doc" }
json = { path = "../json" }

apache-avro = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
hexdump = { workspace = true }
insta = { workspace = true }
url = { workspace = true }